dtext: fix wrong aspect ratio for media embeds on Safari.
Possible fix for media embed thumbnails appearing too wide on iOS Safari.

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -175,9 +175,9 @@ div.prose {
     .media-embed-image > a {
       > img, video {
         border-radius: 0.25rem;
-        width: 100%;
-        height: 100%;
-        max-width: var(--media-embed-size);
+        width: auto;
+        height: auto;
+        max-width: 100%;
         max-height: var(--media-embed-size);
       }
     }
